build: contact page, user can send email to me

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,7 @@
+# Database
 REACT_APP_ROLE=User
+# Email
+REACT_APP_SERVICE_ID=service_1zg6p5s
+REACT_APP_TEMPLATE_ID=template_o3bkkuk
+REACT_APP_PUBLIC_KEY=tTRUGTPu9VXMH1cbC
+REACT_APP_PRIVATE_KEY=6rCpFa3vrd5vaiz32qzQF
