--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-DB_PASSWORD="06644sabine4S."
+DB_PASSWORD="sharif4S."
 DB_HOST="127.0.0.1"
 DB_USER="root"
-DB_NAME="Mysql"
+DB_NAME="blog"
 DB_PORT="3306"
-JWT_SECRET_KEY="06644sabine4S."
+JWT_SECRET_KEY="MyPa$$W0Rd..?!"
